# grb-common

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.md
.github/workflows/: ci.yml
benchmarks/: bench_cosmology.py  bench_extinction.py  bench_fitting.py  run_all.py
docs/: MIGRATION.md  README.md  conf.py  index.rst  quickstart.rst
docs/api/: constants.rst  fitting.rst  index.rst
examples/: basic_fitting.py  lightcurve_analysis.py
src/grb_common/: __init__.py  constants.py  cosmology.py  extinction.py
src/grb_common/fitting/: __init__.py  likelihood.py  models.py  priors.py  result.py
src/grb_common/fitting/backends/: __init__.py  dynesty_backend.py  emcee_backend.py  multinest_backend.py
src/grb_common/io/: __init__.py  loaders.py  schemas.py  writers.py
src/grb_common/plotting/: __init__.py  corner.py  lightcurves.py  spectra.py  style.py
tests/: __init__.py  test_constants.py  test_cosmology.py  test_fitting.py  test_io.py  test_package.py  test_plotting.py
